Use HDS header sizes, avoid horizontal scrolling on small screens

--- a/src/domain/accessibilityStatement/accessibilityStatement.module.scss
+++ b/src/domain/accessibilityStatement/accessibilityStatement.module.scss
@@ -8,12 +8,9 @@
   }
 
   h1 {
-    font-size: var(--hds-text-xxl);
-  }
-  h2 {
-    font-size: var(--hds-text-xl);
-  }
-  h3 {
-    font-size: var(--hds-text-l);
+    overflow-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-word;
+    hyphens: manual;
   }
 }
